tests/golden/err-export-no-annotation/expected_error.txt
error: 公開する `index` には型注釈が必要です
 --> ./page.clum:1:2
  |
1 | ^index = h .div
  |  ^^^^^ `^` された定義は境界です。`^名前: 型 = 式` の形で束縛してください
